# web-presence-scanner

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Makefile  README.md  color.css  docker-compose.yml  index.html
.claude/: launch.json
Documentation/: walkthrough.md
_bmad-output/brainstorming/: brainstorming-session-2026-03-03-1708.md
_bmad-output/planning-artifacts/: product-brief-web-presence-scanner-2026-03-03.md
_bmad/_config/: agent-manifest.csv  bmad-help.csv  files-manifest.csv  manifest.yaml  workflow-manifest.csv
_bmad/_config/ides/: antigravity.yaml  claude-code.yaml
_bmad/_memory/: config.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/app/: auth.py  config.py  database.py  main.py
backend/app/api/: router.py  scan.py
backend/app/auth/: dependencies.py  schemas.py
backend/app/models/: scan.py
backend/app/scanners/: base.py  hibp.py  registry.py  web_search.py
backend/app/scans/: models.py  router.py  schemas.py  service.py
backend/app/schemas/: scan.py
backend/app/services/: cache_service.py  input_detector.py  scan_service.py
backend/app/shared/: exceptions.py  http_client.py
backend/app/workers/: scan_worker.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/app/scan/[id]/: page.tsx
frontend/lib/: api.ts  supabase.ts
